--- a/01-struktur/index.html
+++ b/01-struktur/index.html
@@ -53,7 +53,7 @@
             </article>
 
             <article>
-                <h1>PKW mit Anhänger Stürtze in Wienfluss</h1>
+                <h1>PKW mit Anhänger stürtze in Wienfluss</h1>
                 <img src="https://placekitten.com/300/200" alt="Bild1">
             </article>
 
@@ -66,6 +66,7 @@
                 <li>Angriffe auf energieanlagen: Stromabschaltungen in Ukraine-Krieg</li>
             </ul>
             
+
             <h2>Inland</h2>
             <ul>
                 <li>Punkt 1</li>
