--- a/07-bakery/index.html
+++ b/07-bakery/index.html
@@ -79,5 +79,12 @@
             </div>
         </footer>
     </div>
+    <script src="https://code.jquery.com/jquery-3.6.1.min.js" ></script>
+
+    <script>
+        $('#nav_oben img').on('click', function() {
+            $('#nav_oben > ul').toggleClass('sichtbar');
+        } );
+    </script>
 </body>
 </html>
