--- a/04-formulare/index.html
+++ b/04-formulare/index.html
@@ -69,6 +69,12 @@
             <label for="monat"></label>
             <input type="month" id="monat" name="monat">
         </div>
+        <select name="auswahl" id="auswahl">
+            <option value="1">1</option>
+            <option value="2">2</option>
+            <option value="3">3</option>
+            <option value="4">4</option>
+        </select>
         <div>
             <label for="bereich"></label>
             <input type="range" id="bereich" name="bereich">
