--- a/hue1/index.html
+++ b/hue1/index.html
@@ -13,7 +13,7 @@
 
 </head>
 <body>
-    <header>
+    <header class="inner_wrapper">
         <a href="#">
             <img src="bilder/logo-x-signage.png" alt="X-Signage Logo">
         </a>
