--- a/HTML-CSS/09-Display-grid/index.html
+++ b/HTML-CSS/09-Display-grid/index.html
@@ -11,15 +11,14 @@
             grid-template-columns: auto 80% auto;
             grid-template-rows: 200px auto 50px ;
             grid-template-areas: 
-                ".  header  ."
+                ".  headerg  ."
                 ".  main    ."
                 ".  footer  .";
-
         }
 
         #main-header{
             background: brown;
-            grid-area: header;
+            grid-area: headerg;
         }
 
         main{
