Spielerreiene mit arrays strings

--- a/JS/JS_11_image_galery/index.html
+++ b/JS/JS_11_image_galery/index.html
@@ -16,7 +16,7 @@
 
     <script src="js/bootstrap.js"></script>
     <script src="js/jquery-3.6.3.js"></script>
-    <script src="js/main.js"></script>
+    <script src="js/anderes.js"></script>
 
 </body>
 </html>
