--- a/HTML-CSS/04-formulare/index.html
+++ b/HTML-CSS/04-formulare/index.html
@@ -70,8 +70,8 @@
             <input type="month" id="monat" name="monat">
         </div>
         <select name="auswahl" id="auswahl">
-            <option value="1">1</option>
-            <option value="2">2</option>
+            <option value="kg">kg</option>
+            <option value="pkg">pkg</option>
             <option value="3">3</option>
             <option value="4">4</option>
         </select>
