Projekt login umständlich

--- a/Projekt-Speisekarte/index.html
+++ b/Projekt-Speisekarte/index.html
@@ -14,8 +14,10 @@
 
     <div id="innerWrapper">
         <header>
-            <h1>Unsere Speise- und Getränkekarte </h1>
-
+            <div id="header_sprache">
+                <h1>Unsere Karte </h1>
+                <div id="sprache"><a href="#?englisch"><img src="img/englisch.png" alt="Sprachauswahl"></a></div>
+            </div>
             <div id="auswahl">
                 <label class="schalter">
                     <input type="checkbox" name="sod" id="sod">
@@ -206,8 +208,6 @@
                 <button id="d5">Spirituosen</button>
             </div>
         </main>
-    
-
 
         <footer>
             <a href="#">* Allergene Übersicht</a> 
@@ -220,7 +220,9 @@
 
     <script src="js/jquery-3.6.3.js"></script>
     <script src="js/cookie.umd.min.js"></script>
-    <script src="js/main.js" ></script>
+    <!-- <script src="js/funktionen.js"></script> -->
+    <script src="js/main.js"></script>
+    
 
 </body>
 </html>
