--- a/HTML-CSS/09-Display-grid/index.html
+++ b/HTML-CSS/09-Display-grid/index.html
@@ -44,7 +44,7 @@
     <img id="bild" src="../06-blog/bilder/design1-1.png" alt="">
 
     <div id="wrapper">
-        <header id="main-header">        </header>
+        <header id="main-header">   dfasdfsadf     </header>
         <main >       irgendwas </main>
 
         <footer id="main-footer">        </footer>
