--- a/Projekt-Speisekarte/index_test.html
+++ b/Projekt-Speisekarte/index_test.html
@@ -109,6 +109,7 @@
     <button class="sub_buttons" name="seite" value="s_fa_hinzu">Speise hinzufügen</button>
 
 </form>
+<button type="submit"></button>
 
 
 
