--- a/Projekt-Speisekarte/index_test.html
+++ b/Projekt-Speisekarte/index_test.html
@@ -111,11 +111,15 @@
 </form>
 <button type="submit"></button>
 
+<p id="test"> irgendwas</p>
 
 
 
 
-
+<script src="js/jquery-3.6.3.js"></script>
+<script src="js/cookie.umd.min.js"></script>
+<!-- <script src="js/funktionen.js"></script> -->
+<script src="js/test.js"></script>
 
 </body>
 </html>
